# COMP3766

./: .gitignore  PID_control.py  README.md  a3_sample.py  a4_template.py  lec14_IK.py
.devcontainer/: devcontainer.json
lab3_resources/: goal_pose_publisher.py  puma_analytical_IK.py  puma_numerical_IK.py
lab4_resources/: puma_trajectory.py
lectures/: 16_control_pid.py
puma_resources/launch/: lab2.launch.py  puma.launch.py
puma_resources/meshes/: base.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl
puma_resources/rviz/: puma.rviz
puma_resources/urdf/: puma.urdf
src/lec10_urdf/: CMakeLists.txt  README.md  package.xml
src/lec10_urdf/launch/: display.launch.py
src/lec10_urdf/rviz/: rr_robot.rviz
src/lec10_urdf/urdf/: rr_robot.urdf
src/open_manipulator_controls/open_manipulator_moveit_config/launch/: moveit.rviz
